fixed double border on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -790,6 +790,9 @@ input[type=text], select, textarea {
     .column:first-child {
         display: none;
       }
+    .column:nth-child(2){
+        border:none;
+    }
 }
 
   
